# specforge

./: .gitignore  AUDIT_EXPERT_REPORT.md  FINAL_FREEZE_CHECK_MACHINE_READABLE_SUMMARY.json  FINAL_FREEZE_CHECK_TERMINAL_EVIDENCE.md  FINAL_REAUDIT_MACHINE_READABLE_SUMMARY.json  FINAL_REAUDIT_TERMINAL_EVIDENCE.md  FREEZE_CHECK_REPORT.md  FREEZE_CHECK_TERMINAL_EVIDENCE.md  MACHINE_READABLE_SUMMARY.json  Makefile  README.md  REAUDIT_MACHINE_READABLE_SUMMARY.json  REAUDIT_TERMINAL_EVIDENCE.md  REPORT.md  REPORT_INDEX.md  TERMINAL_EVIDENCE.md  pyproject.toml
.tmp/: en_overloaded_brief.txt  en_public_path_brief.txt  near_miss_brief.txt  ru_generate_payload.json  ru_overloaded_brief.txt  ru_public_path_brief.txt
audits/: FINAL_FREEZE_CHECK_REPORT.md  FINAL_REAUDIT_EXPERT_REPORT.md  FREEZE_CHECK_MACHINE_READABLE_SUMMARY.json  REAUDIT_EXPERT_REPORT.md
codex reports/: REPORT_2.md  REPORT_3.md
codex_reports/: REPORT.md  REPORT_INDEX.md  final_demo_curation_pass.md  stage_03_1_architecture_cleanup.md  stage_04_ui.md  stage_05_6_pre_audit_polish.md  stage_05_7_final_fix_pass.md  stage_05_9_freeze_focused_remediation.md  stage_05_eval_and_hardening.md  stage_06_1_smallest_blockers_remediation.md  stage_06_3_public_path_cleanup.md
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  DEMO_SCENARIOS.md  EVAL_PLAN.md  SCOPE.md
eval/: client_cases.json  edge_cases.json  founder_cases.json  internal_cases.json
examples/: agency_client_brief.txt  contradictory_founder_brief.txt  founder_app_idea.txt  internal_operations_tool_brief.txt
tests/: test_analyze.py  test_api.py  test_cli.py  (+5 more)
(+48 files in other folders)
